# Servers

./: .gitignore  CMakeLists.txt  ConvertToUtf.ps1  README.md  config.ini
ChatServer/: CMakeLists.txt
ChatServer/include/: CServer.h  CSession.h  ChatGrpcClient.h  ChatServiceImpl.h  ChatSession.h  LogicSystem.h  UserMgr.h
ChatServer/src/: CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatServer.cpp  ChatServiceImpl.cpp  ChatSession.cpp  LogicSystem.cpp  UserMgr.cpp
GateServer/: CMakeLists.txt
GateServer/include/: CServer.h  HttpConnection.h  LogicSystem.h  VerifyGrpcClient.h
GateServer/src/: CServer.cpp  GateServer.cpp  HttpConnection.cpp  LogicSystem.cpp  VerifyGrpcClient.cpp
ResourceServer/: CMakeLists.txt
ResourceServer/include/: BaseLogic.h  CServer.h  CSession.h  ChatServerGrpcClient.h  FileSession.h  FileSystem.h  FileWorker.h  LogicSystem.h  UserMgr.h  base64.h
ResourceServer/src/: BaseLogic.cpp  CServer.cpp  CSession.cpp  ChatServerGrpcClient.cpp  FileSession.cpp  FileSystem.cpp  FileWorker.cpp  LogicSystem.cpp  LogicWorker.cpp  MsgNode.cpp  ResourceServer.cpp  UserMgr.cpp  base64.cpp
StatusServer/: CMakeLists.txt
StatusServer/include/: StatusServiceImpl.h
StatusServer/src/: StatusServer.cpp  StatusServiceImpl.cpp
VerifyServer/: config.js  config.json  email.js  package-lock.json  package.json  server.js
common/: CMakeLists.txt
common/include/: AsioIOContextPool.h  BaseLogic.h  BaseSession.h  ConfigMgr.h  Defer.h  DistLock.h  FileInfo.h  LogContext.h  Logger.h  MsgNode.h  MysqlDao.h  MysqlMgr.h  MysqlPool.h  RedisMgr.h  Singleton.h  StatusGrpcClient.h  const.h  data.h  type.h  utils.h
common/proto/: message.proto
common/src/: AsioIOContextPool.cpp  BaseLogic.cpp  ConfigMgr.cpp  DistLock.cpp  FileInfo.cpp  LogContext.cpp  Logger.cpp  MsgNode.cpp  MysqlDao.cpp  MysqlMgr.cpp  MysqlPool.cpp  RedisMgr.cpp  StatusGrpcClient.cpp  decode.py  utils.cpp
